[package]
name = "nyaa-si"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/nyaa-si"
repository = "https://github.com/cijiugechu/nyaa-si"
authors = ["cijiugechu <cijiugechu@gmail.com>"]
description = "An async Nyaa client for Rust"
keywords = ["nyaa", "api", "client"]
categories = ["api-bindings", "network-programming", "web-programming"]
version = "0.1.3"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.19"}
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio  = { version = "1.36" }
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing-subscriber = { version = "0.3" }